--- a/tddjangorestapi/requirements.txt
+++ b/tddjangorestapi/requirements.txt
@@ -3,8 +3,15 @@ Django==5.0.6
 django-cors-headers==4.4.0
 django-filter==24.2
 djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
+djangorestframework-simplejwt==5.3.1       
+drf-yasg==1.21.7
+inflection==0.5.1
 mysqlclient==2.2.4
+packaging==24.1
 PyJWT==2.8.0
+pytz==2024.1
+PyYAML==6.0.1
+setuptools==70.1.1
 sqlparse==0.5.0
 tzdata==2024.1
+uritemplate==4.1.1
